ajuste de CSS para adaptar a celulares

--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div id="imagen-brand">
         <div id="perrito1" class="card">
-            <img src="./imagenes/pexels-josh-hild-3009441.jpg" alt="hasta ahora imagen de referencia">
+            <img src="./imagenes/perrito1.jpg" alt="hasta ahora imagen de referencia">
             <p>Cual es la raza de este perrito?<br>Quieres Saber de tu Perrito</p>
         </div>
 
